--- a/package.json
+++ b/package.json
@@ -4,20 +4,20 @@
   "private": true,
   "homepage": "https://nvotes.com/",
   "dependencies": {
-    "@types/jest": "^24.0.23",
-    "@types/node": "^12.12.7",
-    "@types/react": "^16.9.11",
-    "@types/react-dom": "^16.9.4",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-named-asset-import": "^0.3.6",
-    "husky": "^3.0.9",
-    "juvenal-lib": "file:../juvenal-lib",
-    "lint-staged": "^9.4.2",
-    "prettier": "^1.19.1",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0",
-    "typescript": "^3.7.2"
+    "@types/jest": "24.9.0",
+    "@types/node": "12.12.28",
+    "@types/react": "16.9.22",
+    "@types/react-dom": "16.9.5",
+    "babel-loader": "8.0.6",
+    "babel-plugin-named-asset-import": "0.3.6",
+    "husky": "3.1.0",
+    "juvenal-lib": "git+https://git@github.com/nVotes/juvenal-lib.git#master",
+    "lint-staged": "10.0.7",
+    "prettier": "1.19.1",
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
+    "react-scripts": "3.4.0",
+    "typescript": "3.8.2"
   },
   "scripts": {
     "start": "react-app-rewired start --verbose",
@@ -34,6 +34,11 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -47,8 +52,8 @@
     ]
   },
   "devDependencies": {
-    "react-app-rewired": "^2.1.5",
-    "worker-loader": "^2.0.0",
+    "react-app-rewired": "2.1.5",
+    "worker-loader": "2.0.0",
     "typedoc": "0.16.10"
   }
 }
