--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "babel-loader": "8.0.6",
     "babel-plugin-named-asset-import": "0.3.6",
     "husky": "3.1.0",
-    "juvenal-lib": "git+https://git@github.com/nVotes/juvenal-lib.git#master",
+    "juvenal-lib": "https://github.com/nVotes/juvenal-lib.git#master",
     "lint-staged": "10.0.7",
     "prettier": "1.19.1",
     "react": "16.12.0",
@@ -21,7 +21,7 @@
   },
   "scripts": {
     "start": "react-app-rewired start --verbose",
-    "build": "react-app-rewired build --verbose",
+    "build": "cd node_modules/juvenal-lib; yarn && yarn build; cd ../..; react-app-rewired build --verbose",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject",
     "clean": "rm -rf build/",
@@ -53,7 +53,7 @@
   },
   "devDependencies": {
     "react-app-rewired": "2.1.5",
-    "worker-loader": "2.0.0",
-    "typedoc": "0.16.10"
+    "typedoc": "0.16.10",
+    "worker-loader": "2.0.0"
   }
 }
