--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,12 +33,14 @@ jobs:
 
     # update code coverage in codecov.io
     - uses: codecov/codecov-action@v1
+      if: github.event_name == 'push' && github.ref == 'refs/heads/master'
       with:
         token: ${{ secrets.CODECOV_TOKEN }} # required, use a github secret for that
         fail_ci_if_error: true              # optional (default=false)
 
     # publish gh-pages branch
     - name: Deploy gh-pages
+      if: github.event_name == 'push' && github.ref == 'refs/heads/master'
       uses: peaceiris/actions-gh-pages@v3
       with:
         deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
