--- a/package.json
+++ b/package.json
@@ -45,26 +45,29 @@
     ]
   },
   "dependencies": {
+    "acorn": "8.0.5",
     "babel-loader": "8.1.0",
-    "babel-plugin-named-asset-import": "0.3.6",
+    "babel-plugin-named-asset-import": "0.3.7",
     "juvenal-lib": "https://github.com/nvotes/juvenal-lib.git#master",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-scripts": "3.4.1"
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-scripts": "4.0.1",
+    "yargs-parser": "20.2.4"
   },
   "devDependencies": {
-    "@types/jest": "25.2.1",
-    "@types/node": "13.13.4",
-    "@types/react": "16.9.34",
-    "@types/react-dom": "16.9.7",
-    "husky": "4.2.5",
-    "lint-staged": "10.2.2",
-    "prettier": "2.0.5",
-    "react-app-rewired": "2.1.5",
-    "typedoc": "0.17.6",
-    "typescript": "3.8.3",
-    "worker-loader": "2.0.0",
-    "yarn-deduplicate": "^2.0.0"
+    "@types/jest": "26.0.20",
+    "@types/node": "14.14.22",
+    "@types/react": "17.0.0",
+    "@types/react-dom": "17.0.0",
+    "husky": "4.3.8",
+    "lint-staged": "10.5.3",
+    "prettier": "2.2.1",
+    "react-app-rewired": "2.1.8",
+    "typedoc": "0.20.19",
+    "typescript": "4.1.3",
+    "worker-loader": "3.0.7",
+    "yarn-audit-fix": "^3.2.13",
+    "yarn-deduplicate": "^3.1.0"
   },
   "resolutions": {
     "**/minimist": "1.2.5",
