--- a/package.json
+++ b/package.json
@@ -46,32 +46,30 @@
   },
   "dependencies": {
     "acorn": "8.0.5",
-    "babel-loader": "8.1.0",
+    "babel-loader": "8.2.2",
     "babel-plugin-named-asset-import": "0.3.7",
     "juvenal-lib": "https://github.com/nvotes/juvenal-lib.git#master",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-scripts": "4.0.1",
+    "react-scripts": "4.0.2",
     "yargs-parser": "20.2.4"
   },
   "devDependencies": {
     "@types/jest": "26.0.20",
-    "@types/node": "14.14.22",
-    "@types/react": "17.0.0",
+    "@types/node": "14.14.25",
+    "@types/react": "17.0.1",
     "@types/react-dom": "17.0.0",
-    "husky": "4.3.8",
-    "lint-staged": "10.5.3",
+    "husky": "5.0.9",
+    "lint-staged": "10.5.4",
     "prettier": "2.2.1",
     "react-app-rewired": "2.1.8",
-    "typedoc": "0.20.23",
-    "typescript": "4.1.3",
+    "typedoc": "0.20.24",
+    "typescript": "4.1.5",
     "worker-loader": "3.0.7",
-    "yarn-audit-fix": "^3.2.13",
+    "yarn-audit-fix": "^3.2.15",
     "yarn-deduplicate": "^3.1.0"
   },
   "resolutions": {
-    "**/minimist": "1.2.5",
-    "**/acorn": "7.1.1",
-    "**/yargs-parser": "13.1.2"
+    "**/minimist": "1.2.5"
   }
 }
