--- a/package.json
+++ b/package.json
@@ -57,8 +57,8 @@
   "devDependencies": {
     "@types/jest": "26.0.20",
     "@types/node": "14.14.33",
-    "@types/react": "17.0.3",
-    "@types/react-dom": "17.0.2",
+    "@types/react": "17.0.1",
+    "@types/react-dom": "17.0.1",
     "husky": "5.1.3",
     "lint-staged": "10.5.4",
     "prettier": "2.2.1",
@@ -66,8 +66,8 @@
     "typedoc": "0.20.30",
     "typescript": "4.2.3",
     "worker-loader": "3.0.8",
-    "yarn-audit-fix": "^3.3.1",
-    "yarn-deduplicate": "^3.1.0"
+    "yarn-audit-fix": "3.3.1",
+    "yarn-deduplicate": "3.1.0"
   },
   "resolutions": {
     "**/minimist": "1.2.5"
