--- a/package.json
+++ b/package.json
@@ -49,27 +49,31 @@
     "babel-loader": "8.1.0",
     "babel-plugin-named-asset-import": "0.3.7",
     "juvenal-lib": "https://github.com/nvotes/juvenal-lib.git#master",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-scripts": "4.0.3",
-    "yargs-parser": "20.2.6"
+    "yargs-parser": "20.2.7"
   },
   "devDependencies": {
-    "@types/jest": "26.0.20",
-    "@types/node": "14.14.33",
+    "@types/jest": "26.0.21",
+    "@types/node": "14.14.35",
     "@types/react": "17.0.1",
     "@types/react-dom": "17.0.1",
     "husky": "5.1.3",
     "lint-staged": "10.5.4",
     "prettier": "2.2.1",
     "react-app-rewired": "2.1.8",
-    "typedoc": "0.20.30",
+    "typedoc": "0.20.32",
     "typescript": "4.2.3",
     "worker-loader": "3.0.8",
-    "yarn-audit-fix": "3.3.1",
+    "yarn-audit-fix": "3.3.2",
     "yarn-deduplicate": "3.1.0"
   },
   "resolutions": {
-    "**/minimist": "1.2.5"
+    "**/y18n": "4.0.1",
+    "**/ssri": "8.0.1",
+    "**/is-svg": "4.2.2",
+    "**/minimist": "1.2.5",
+    "**/react-dev-utils": "11.0.4"
   }
 }
